--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
   },
