[Add] Implement debug zone with TypeScript Migrate old JavaScript codes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "module": "esnext",
-    "target": "es5",
-    "allowJs": true,
+    "target": "esnext",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
