--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "webpack --mode production"
   },
   "devDependencies": {
+    "@types/three": "^0.130.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "dotenv-webpack": "^7.0.3",
@@ -19,6 +20,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "textalive-app-api": "^0.3.0"
+    "textalive-app-api": "^0.3.0",
+    "three": "^0.130.1"
   }
 }
