--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "start": "webpack-cli serve",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "check": "prettier -c . && eslint src/**/*.ts"
   },
   "devDependencies": {
     "@types/opentype.js": "^1.3.2",
