--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,6 @@
     "noUncheckedIndexedAccess": true,
     "allowJs": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
