--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@tweakpane/core": "^1.0.6",
     "opentype.js": "^1.3.3",
     "textalive-app-api": "^0.3.0",
-    "three": "^0.131.3"
+    "three": "^0.131.3",
+    "tweakpane": "^3.0.5"
   }
 }
