[Change] Split some codes to file module

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,3 +2,5 @@ extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
   - prettier
+rules:
+  "@typescript-eslint/explicit-module-boundary-types": off
