--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/three": "^0.131.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
+    "copy-webpack-plugin": "^9.0.1",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-webpack-plugin": "^3.0.1",
+    "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.3.2",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
