--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@tweakpane/core": "^1.0.6",
+    "@tweakpane/plugin-essentials": "^0.1.2",
     "opentype.js": "^1.3.3",
     "textalive-app-api": "^0.3.0",
     "three": "^0.131.3",
