--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
       - run: npm ci
       - run: npm run check
       - run: npm run build
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
       - uses: nwtgck/actions-netlify@v1.2.2
         with:
           publish-dir: dist
