--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/three": "^0.131.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
     "dotenv-webpack": "^7.0.3",
