--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/opentype.js": "^1.3.3",
     "@types/three": "^0.131.0",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "clean-webpack-plugin": "^4.0.0",
