--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "opentype.js": "^1.3.3",
     "textalive-app-api": "^0.3.0",
     "three": "^0.132.2",
+    "troika-three-text": "^0.42.0",
     "tweakpane": "^3.0.5"
   }
 }
