--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "check": "prettier -c . && eslint src/**/*.ts"
   },
   "devDependencies": {
+    "@types/detect-browser": "^4.0.0",
     "@types/opentype.js": "^1.3.3",
     "@types/three": "^0.131.0",
     "@types/webpack": "^5.28.0",
@@ -30,6 +31,7 @@
   "dependencies": {
     "@tweakpane/core": "^1.0.6",
     "@tweakpane/plugin-essentials": "^0.1.2",
+    "detect-browser": "^5.2.1",
     "html2canvas": "^1.3.2",
     "meshline": "^2.0.3",
     "opentype.js": "^1.3.3",
